Adds environment specific behaviours for managing files and scaling